Wed, Jun 8, 2022, 3:48 AM +00:00

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -22,7 +22,8 @@
             </div>
             <div class="sections">
                 <div class="SignUpRectSection">
-            <span class="socMed">SIGN UP USING SOCIAL MEDIA:</span> <span class="arrow1"> &#x2193;</span>
+            <span class="socMed">SIGN UP USING SOCIAL MEDIA:</span>
+            <!-- <span class="arrow1"> &#x2193;</span> -->
                 <!-- <form> -->
                     <div class="socialMedia">
                         <div>
@@ -30,7 +31,7 @@
                             <i class="fa-brands fa-google"></i> Login With Google
                             </a>
                         </div>
-                        <div>
+                        <!-- <div>
                             <a href='https://www.facebook.com/login.php/' class="fb btn">
                             <i class="fa-brands fa-facebook-f"></i>
                             </a>
@@ -39,7 +40,7 @@
                             <a href='https://twitter.com/i/flow/login' class="tw btn">
                             <i class="fa-brands fa-twitter"></i>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="UserDetails">
                         <span class="or">OR PLEASE FILL IN THE FOLLOWING DETAILS:</span>
