Wed, Jun 8, 2022, 3:49 AM +00:00

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -22,7 +22,7 @@
             </div>
             <div class="sections">
                 <div class="SignUpRectSection">
-            <span class="socMed">SIGN UP USING SOCIAL MEDIA:</span>
+            <span class="socMed">Sign up</span>
             <!-- <span class="arrow1"> &#x2193;</span> -->
                 <!-- <form> -->
                     <div class="socialMedia">
@@ -61,7 +61,7 @@
                                     <input type="submit" value="CREATE ACCOUNT!" onclick="signup()">
                                 </div>
                                 <div class="AlreadyAccount">
-                                    Already have an account? <a href="loginPage.html">SIGN IN!</a>
+                                    Already have an account? <a href="loginPage.html">Sign in!</a>
                                 </div>
                             </div>
                         </div>
