Wed, Jun 8, 2022, 3:51 AM +00:00

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -58,7 +58,7 @@
                                     <input id="name3" name="password" type="password" placeholder="Password" required>
                                 </div>
                                 <div class="CreateAccount">
-                                    <input type="submit" value="CREATE ACCOUNT!" onclick="signup()">
+                                    <button type="submit" onclick="signup()">Create Account</button>
                                 </div>
                                 <div class="AlreadyAccount">
                                     Already have an account? <a href="loginPage.html">Sign in!</a>
