Added vue to dashboard

--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -15,8 +15,8 @@
     <script src="/javascripts/events.js"></script>
 
     <!--For Vue-->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script> -->
-    <script src="javascripts/Dashboard-noVue.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script src="javascripts/Dashboard-vue.js" defer></script>
 </head>
 <body>
             <!--Logo/website name-->
@@ -47,8 +47,8 @@
         <hr />
 
         <!-- Page content -->
-<div class="content">
-    <h1 onclick=""> Dashboard </h1>
+<div class="content" id="vueBody">
+    <h1 v-on:click="getEvents()"> Dashboard </h1>
     <!-- Create & Join Event Buttons -->
     <div class="buttons">
         <button type="button" onclick="window.location.href='/add_event.html'"><i class="fa-solid fa-plus"></i> Create Event </button>
@@ -93,14 +93,14 @@
             <br><br>
             <!-- Individual Events -->
             <div id="events">
-                <div class="event">
+                <div class="event" v-for="item in events">
                     <div class="dateTime">
-                        <p class="date"><i class="fa-solid fa-calendar"></i> .../... </p>
-                        <p class="time"><i class="fa-solid fa-clock"></i> .... </p>
+                        <p class="date"><i class="fa-solid fa-calendar"></i> {{ item.DATE }} </p>
+                        <p class="time"><i class="fa-solid fa-clock"></i> {{ item.START_TIME }} </p>
                     </div>
                     <div class="nameLocale">
-                        <h3 class="eventName"><a href="Dashboard.html"> ... </a></h3>
-                        <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> ..., ... </p>
+                        <h3 class="eventName"><a href="Dashboard.html"> {{ item.EVENTNAME }} </a></h3>
+                        <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> {{item.STREETNO}} {{item.STREET}}, {{ item.SUBURB }} </p>
                     </div>
                 </div>
             </div>
