Wed, Jun 8, 2022, 5:11 AM +00:00

--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -17,7 +17,7 @@
             <form>
                 <input id="fn" name=firstName type="text" placeholder="First Name"<br>
                 <input id="ln" name=lastName type="text" placeholder="Last Name"><br><br>
-                <button type="submit" onclick="guest()">Submit</button>
+                <button onclick="guest()">Submit</button>
             </form>
         </div>
 
