--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -13,6 +13,8 @@
     <script src="/javascripts/settings.js"></script>
     <script src="/javascripts/login.js"></script>
     <script src="/javascripts/events.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script src="javascripts/Dashboard-vue.js" defer></script>
 </head>
 <body>
             <!--Logo/website name-->
@@ -44,7 +46,7 @@
 
         <!-- Page content -->
 <div class="content" id="vueBody">
-    <h1 v-on:click="getEvents()"> Dashboard </h1>
+    <h1 v-on:click="initialPopulate();"> Dashboard </h1>
     <!-- Create & Join Event Buttons -->
     <div class="buttons">
         <button type="button" onclick="window.location.href='/add_event.html'"><i class="fa-solid fa-plus"></i> Create Event </button>
