Thu, Jun 9, 2022, 2:52 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -54,7 +54,7 @@
 
         <!-- <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a> -->
 <div class="LoginRectSection">
-         <h1 id="log-in">Log in to continue</h1>
+         <h1 id="log-in">Log in to continue:</h1>
     <div class="socialMedia">
         <div id="google">
             <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50">
