--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -54,7 +54,7 @@
 
         <!-- <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a> -->
 <div class="LoginRectSection">
-         <h1 id="log-in">Log in to continue:</h1>
+         <h1 id="log-in">Log in to continue</h1>
     <div class="socialMedia">
         <div id="google">
             <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50">
@@ -76,7 +76,7 @@
         </div> -->
 
     <div class="UserDetails">
-        <span class="or">OR:</span>
+        <span class="or">or:</span>
         <div id="emailInput" class="inputs">
             <input id="name" type="text" placeholder="Email" required>
         </div>
