Thu, Jun 9, 2022, 2:58 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -76,7 +76,7 @@
         </div> -->
 
     <div class="UserDetails">
-        <span class="or">or:</span>
+        <span class="or">OR</span>
         <div id="emailInput" class="inputs">
             <input id="name" type="text" placeholder="Email" required>
         </div>
