Thu, Jun 9, 2022, 3:15 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -78,7 +78,7 @@
     </div>
     <br>
     <div class="NoAccount">
-        Don't have an account? <a href="signUpPage.html">Sign up here!</a>
+        <a href="signUpPage.html">Don't have an account? Sign up here!</a>
     </div>
         <!-- <div>
             <a href='https://www.facebook.com/login.php/' class="fb btn">
