Thu, Jun 9, 2022, 3:18 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -77,8 +77,8 @@
         </div>
     </div>
     <br>
-    <div class="NoAccount">
-        <a href="signUpPage.html">Don't have an account? Sign up here!</a>
+    <div>
+        <a class="NoAccount" href="signUpPage.html">Don't have an account? Sign up here!</a>
     </div>
         <!-- <div>
             <a href='https://www.facebook.com/login.php/' class="fb btn">
