Thu, Jun 9, 2022, 3:35 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -94,7 +94,7 @@
         <!-- Create event -->
         <button onclick="addEvent()" id="submit-button"> Create event</button>
         <!-- Cancel button -->
-        <button id="cancel-button"> Cancel </button>
+        <!-- <button id="cancel-button"> Cancel </button> -->
 
     </form>
 
