--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -23,24 +23,11 @@
             <div class="sections">
                 <div class="SignUpRectSection">
             <span class="socMed">Sign up</span>
-            <!-- <span class="arrow1"> &#x2193;</span> -->
                 <!-- <form> -->
                     <div class="socialMedia">
                         <div>
-                            <a href='https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin' class="googleBtn">
-                            <i class="fa-brands fa-google"></i> Login With Google
-                            </a>
+                            <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50">
                         </div>
-                        <!-- <div>
-                            <a href='https://www.facebook.com/login.php/' class="fb btn">
-                            <i class="fa-brands fa-facebook-f"></i>
-                            </a>
-                        </div>
-                        <div>
-                            <a href='https://twitter.com/i/flow/login' class="tw btn">
-                            <i class="fa-brands fa-twitter"></i>
-                            </a>
-                        </div> -->
                     </div>
                     <div class="UserDetails">
                         <span class="or">OR PLEASE FILL IN THE FOLLOWING DETAILS:</span>
