Thu, Jun 9, 2022, 3:53 AM +00:00

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -25,12 +25,12 @@
     <body>
         <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
 
-        <h1 class="signUp">Sign up to create an account</h1>
+        <h1 class="signUp">Create an account</h1>
 
         <div class="rectangles">
-            <div class="sections">
+            <!-- <div class="sections">
                 <div class="picture1"></div>
-            </div>
+            </div> -->
             <div class="sections">
                 <div class="SignUpRectSection">
             <span class="socMed">Sign up</span>
