--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -21,52 +21,78 @@
         <script src="javascripts/page.js"></script>
 
     </head>
+<body>
+    <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
+    <header>
 
-    <body>
-        <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
-
-        <h1 class="signUp">Create an account</h1>
-
-        <div class="rectangles">
-            <!-- <div class="sections">
-                <div class="picture1"></div>
-            </div> -->
-            <div class="sections">
-                <div class="SignUpRectSection">
-            <span class="socMed">Sign up</span>
-                <!-- <form> -->
-                    <div class="socialMedia">
-                        <div>
-                            <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50">
-                        </div>
-                    </div>
-                    <div class="UserDetails">
-                        <span class="or">Or fill in your details:</span>
-                            <div id="fnInput" class="inputs">
-                                <input id="name" name="firstName" type="text" placeholder="First Name" required>
-                            </div>
-                            <div id="lnInput" class="inputs">
-                                <input id="name1" name="lastName" type="text" placeholder="Last Name" required>
-                            </div>
-                            <div class="inputfields2">
-                                <div id="emailInput" class="inputs">
-                                    <input id="name2" name="email" type="text" placeholder="Email" required>
-                                </div>
-                                <div id="passwordInput" class="inputs">
-                                    <input id="name3" name="password" type="password" placeholder="Password" required>
-                                </div>
-                                <div class="CreateAccount">
-                                    <button type="submit" onclick="signup()">Create Account</button>
-                                </div>
-                                <div class="AlreadyAccount">
-                                    Already have an account? <a href="loginPage.html">Sign in!</a>
-                                </div>
-                            </div>
-                        </div>
-                <!-- </form> -->
+    <!--Logo/website name-->
+        <div>
+            <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
         </div>
+
+        <!--container for links to Home and Profile settings-->
+        <div class="top-right-menu">
+            <div class="menu-div">
+                <a href="#user-dashboard" class="link-black menu-btn">Home</a>
+            </div>
+            <div class="settings-dropdown">
+                <button type="button" class="blue-btn">Profile
+                    <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
+                </button>
+
+                <!-- settings to be shown from dropdown menu -->
+                <div class="settings">
+                    <a href="user-account.html" class="link-black">Account Settings</a>
+                    <a href="email-settings.html" class="link-black">Email Settings</a>
+                </div>
+
             </div>
         </div>
+
+    </header>
+    <hr/>
+
+    <h1 class="signUp">Create an account</h1>
+    <div class="rectangles">
+        <!-- <div class="sections">
+            <div class="picture1"></div>
+        </div> -->
+        <div class="sections">
+            <div class="SignUpRectSection">
+        <span class="socMed">Sign up</span>
+            <!-- <form> -->
+                <div class="socialMedia">
+                    <div>
+                        <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50">
+                    </div>
+                </div>
+                <div class="UserDetails">
+                    <span class="or">Or fill in your details:</span>
+                        <div id="fnInput" class="inputs">
+                            <input id="name" name="firstName" type="text" placeholder="First Name" required>
+                        </div>
+                        <div id="lnInput" class="inputs">
+                            <input id="name1" name="lastName" type="text" placeholder="Last Name" required>
+                        </div>
+                        <div class="inputfields2">
+                            <div id="emailInput" class="inputs">
+                                <input id="name2" name="email" type="text" placeholder="Email" required>
+                            </div>
+                            <div id="passwordInput" class="inputs">
+                                <input id="name3" name="password" type="password" placeholder="Password" required>
+                            </div>
+                            <div class="CreateAccount">
+                                <button type="submit" onclick="signup()">Create Account</button>
+                            </div>
+                            <div class="AlreadyAccount">
+                                Already have an account? <a href="loginPage.html">Sign in!</a>
+                            </div>
+                        </div>
+                    </div>
+            <!-- </form> -->
+    </div>
+        </div>
+    </div>
 
 
     </body>
