--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -52,14 +52,13 @@
     </header>
     <hr/>
 
-    <h1 class="signUp">Create an account</h1>
+    <h1 class="signUp">Sign up</h1>
     <div class="rectangles">
         <!-- <div class="sections">
             <div class="picture1"></div>
         </div> -->
         <div class="sections">
             <div class="SignUpRectSection">
-        <span class="socMed">Sign up</span>
             <!-- <form> -->
                 <div class="socialMedia">
                     <div>
@@ -84,13 +83,13 @@
                             <div class="CreateAccount">
                                 <button type="submit" onclick="signup()">Create Account</button>
                             </div>
-                            <div class="AlreadyAccount">
-                                Already have an account? <a href="loginPage.html">Sign in!</a>
+                            <div>
+                                <a class="AlreadyAccount" href="loginPage.html">Already have an account? Sign in!</a>
                             </div>
                         </div>
                     </div>
             <!-- </form> -->
-    </div>
+            </div>
         </div>
     </div>
 
