Thu, Jun 9, 2022, 4:00 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -7,8 +7,13 @@
         <meta name="google-signin-client_id" content="395070286663-89a13j9p6bnq3ipd91072dfpjk2d61fj.apps.googleusercontent.com">
         <meta name="google-signin-plugin_name" content="eventcal">
         <title>Login Page</title>
+
+        <!-- Stylesheets -->
         <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
         <link rel="stylesheet" href="stylesheets/add_event.css">
+        <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
+        <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
+        <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
 
         <script src="https://kit.fontawesome.com/a2e31acb7a.js" crossorigin="anonymous"></script>
 
@@ -50,7 +55,7 @@
 <hr />
 
         <!-- <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a> -->
-<div class="LoginRectSection">
+<div class="RectSection">
     <h1 id="log-in">Log in to continue</h1>
         <div class="socialMedia">
             <div id="google">
