--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -8,7 +8,7 @@
         <meta name="google-signin-plugin_name" content="eventcal">
         <title>Sign Up Page</title>
         <!-- Stylesheets -->
-        <link rel="stylesheet" type="text/css" href="stylesheets/signUpPage.css">
+        <!-- <link rel="stylesheet" type="text/css" href="stylesheets/loginPage.css"> -->
         <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
         <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
         <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
@@ -58,7 +58,7 @@
             <div class="picture1"></div>
         </div> -->
         <div class="sections">
-            <div class="SignUpRectSection">
+            <div class="RectSection">
             <!-- <form> -->
                 <div class="socialMedia">
                     <div>
