Thu, Jun 9, 2022, 4:02 AM +00:00

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -52,7 +52,7 @@
     </header>
     <hr/>
 
-    <h1 class="signUp">Sign up</h1>
+    <h1 id="h1">Sign up</h1>
     <div class="rectangles">
         <!-- <div class="sections">
             <div class="picture1"></div>
