Thu, Jun 9, 2022, 4:03 AM +00:00

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -52,13 +52,13 @@
     </header>
     <hr/>
 
-    <h1 id="h1">Sign up</h1>
     <div class="rectangles">
         <!-- <div class="sections">
             <div class="picture1"></div>
         </div> -->
         <div class="sections">
             <div class="RectSection">
+                <h1>Sign up</h1>
             <!-- <form> -->
                 <div class="socialMedia">
                     <div>
