--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -56,7 +56,7 @@
 
         <!-- <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a> -->
 <div class="RectSection">
-    <h1 id="h1">Log in to continue</h1>
+    <h1">Log in to continue</h1>
         <div class="socialMedia">
             <div id="google">
                 <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50">
