Thu, Jun 9, 2022, 4:04 AM +00:00

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -61,7 +61,7 @@
                 <h1>Sign up</h1>
             <!-- <form> -->
                 <div class="socialMedia">
-                    <div>
+                    <div id="google">
                         <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50">
                     </div>
                 </div>
