Thu, Jun 9, 2022, 4:05 AM +00:00

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="UserDetails">
-                    <span class="or">Or fill in your details:</span>
+                    <span class="or">Or create an account:</span>
                         <div id="fnInput" class="inputs">
                             <input id="name" name="firstName" type="text" placeholder="First Name" required>
                         </div>
