Thu, Jun 9, 2022, 4:07 AM +00:00

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -10,6 +10,7 @@
         <!-- Stylesheets -->
         <!-- <link rel="stylesheet" type="text/css" href="stylesheets/loginPage.css"> -->
         <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
+        <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
         <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
         <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
         <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
@@ -80,8 +81,8 @@
                             <div id="passwordInput" class="inputs">
                                 <input id="name3" name="password" type="password" placeholder="Password" required>
                             </div>
-                            <div class="CreateAccount">
-                                <button type="submit" onclick="signup()">Create Account</button>
+                            <div class="login">
+                                <button id="login-button" type="submit" onclick="signup()">Sign up</button>
                             </div>
                             <div>
                                 <a class="AlreadyAccount" href="loginPage.html">Already have an account? Sign in!</a>
