Thu, Jun 9, 2022, 4:08 AM +00:00

--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -8,9 +8,8 @@
         <meta name="google-signin-plugin_name" content="eventcal">
         <title>Sign Up Page</title>
         <!-- Stylesheets -->
-        <!-- <link rel="stylesheet" type="text/css" href="stylesheets/loginPage.css"> -->
         <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
-        <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
+        <link rel="stylesheet" type="text/css" href="/stylesheets/add_event.css">
         <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
         <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
         <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
