Thu, Jun 9, 2022, 4:10 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -81,7 +81,7 @@
     </div>
     <br>
     <div>
-        <a class="NoAccount" href="signUpPage.html">Don't have an account? Sign up here!</a>
+        <a class="Account" href="signUpPage.html">Don't have an account? Sign up here!</a>
     </div>
         <!-- <div>
             <a href='https://www.facebook.com/login.php/' class="fb btn">
