--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="UserDetails">
-                    <span class="or">Or create an account:</span>
+                    <span class="or"> Create an account:</span>
                         <div id="fnInput" class="inputs">
                             <input id="name" name="firstName" type="text" placeholder="First Name" required>
                         </div>
@@ -83,8 +83,9 @@
                             <div class="login">
                                 <button id="login-button" type="submit" onclick="signup()">Sign up</button>
                             </div>
+                            <br>
                             <div>
-                                <a class="AlreadyAccount" href="loginPage.html">Already have an account? Sign in!</a>
+                                <a class="Account" href="loginPage.html">Already have an account? Sign in!</a>
                             </div>
                         </div>
                     </div>
