Thu, Jun 9, 2022, 4:35 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -64,7 +64,7 @@
         </div>
         <br><br>
     <span class="or">OR</span>
-    
+
     <div class="UserDetails">
         <div id="emailInput" class="inputs">
             <input id="name" type="text" placeholder="Email" required>
@@ -76,7 +76,7 @@
         <br>
 
         <div class="login">
-            <button id="login-button" type="submit" onclick="login()">Login</button>
+            <button id="purple-button" type="submit" onclick="login()">Login</button>
         </div>
     </div>
     <br>
