--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -81,7 +81,7 @@
                         </div>
                         <br>
                         <div class="login">
-                            <button id="login-button" type="submit" onclick="signup()">Sign up</button>
+                            <button id="purple-button" type="submit" onclick="signup()">Sign up</button>
                         </div>
                         <br>
                         <div>
