--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -9,7 +9,7 @@
         <title>Login Page</title>
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css">
+        <!-- <link rel="stylesheet" type="text/css" href="/stylesheets/loginPage.css"> -->
         <link rel="stylesheet" href="stylesheets/add_event.css">
         <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
         <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
