Thu, Jun 9, 2022, 4:43 AM +00:00

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -62,10 +62,11 @@
                 <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50">
             </div>
         </div>
-        <br><br>
-    <span class="or">OR</span>
+        
+    <!-- <span class="or">OR</span> -->
 
     <div class="UserDetails">
+        <span class="or"> Sign in with your account:</span>
         <div id="emailInput" class="inputs">
             <input id="name" type="text" placeholder="Email" required>
         </div>
