--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -15,8 +15,10 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="javascripts/Dashboard-vue.js" defer></script>
 </head>
+</header>
+
             <!--Logo/website name-->
-            <div>
+        <div>
                 <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
             </div>
 
