--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="javascripts/Dashboard-vue.js" defer></script>
 </head>
-</header>
+<header>
 
             <!--Logo/website name-->
         <div>
