--- a/public/book_event_user.html
+++ b/public/book_event_user.html
@@ -25,8 +25,8 @@
 
             <!--container for links to Home and Profile settings-->
             <div class="top-right-menu">
-                <div class="menu-div">
-                    <a href="#user-dashboard" class="link-black menu-btn">Home</a>
+                <div class="menu-div" >
+                    <a onclick="signOut();" class="link-black menu-btn">Sign out</a>
                 </div>
                 <div class="settings-dropdown">
                     <button type="button" class="blue-btn">Profile
