Thu, Jun 9, 2022, 5:25 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -87,7 +87,7 @@
             </div>
         </div>
         <br>
-        <button>Add more times</button>
+        <button id="add-times">Add more times</button>
 
         <br><br><br>
 
