Thu, Jun 9, 2022, 5:38 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -87,7 +87,9 @@
             </div>
         </div>
         <br>
-        <button id="add-times">Add more times</button>
+        <div>
+            <button id="add-times"><i class="fa-solid fa-plus"></i>  Add times</button>
+        </div>
 
         <br><br><br>
 
