--- a/public/add_event.html
+++ b/public/add_event.html
@@ -86,9 +86,9 @@
                 <input type="time" id="to-time" value="17:00">
             </div>
         </div>
-        <br>
+        <br><br>
         <div>
-            <button id="add-times"><i class="fa-solid fa-plus"></i>  Add times</button>
+            <button id="add-times" href="#"><i class="fa-solid fa-plus"></i>  Add times</button>
         </div>
 
         <br><br><br>
