--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
         <title>Guest Details</title>
-        <script src="javascripts/user_no_acc.js"</script>
+        <script src="/javascripts/user_no_acc.js"</script>
 
     </head>
 
