Thu, Jun 9, 2022, 7:43 AM +00:00

--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -16,8 +16,8 @@
 
         <div>
             <form>
-                <input id="fn" name=firstName type="text" placeholder="First Name"<br>
-                <input id="ln" name=lastName type="text" placeholder="Last Name"><br><br>
+                <input id="fn" name="firstName" type="text" placeholder="First Name"<br>
+                <input id="ln" name="lastName" type="text" placeholder="Last Name"><br><br>
                 <button onclick="guest()">Submit</button>
             </form>
         </div>
