--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -18,7 +18,7 @@
             <form>
                 <input id="fn" name="firstName" type="text" placeholder="First Name"<br>
                 <input id="ln" name="lastName" type="text" placeholder="Last Name"><br><br>
-                <button onclick="guest()">Submit</button>
+                <button type="submit" onclick="guest()">Submit</button>
             </form>
         </div>
 
