--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
     <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
     <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script src="javascripts/admin-dashboard-vue.js" defer></script>
     <title>Admin Dashboard</title>
 </head>
 <body>
         <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
         <header>
-
             <!--Logo/website name-->
             <div>
                 <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
             </div>
-
             <!--container for links to Home and Profile settings-->
             <div class="top-right-menu">
                 <div class="menu-div">
@@ -35,30 +35,27 @@
                         <a href="user-account.html" class="link-black">Account Settings</a>
                         <a href="email-settings.html" class="link-black">Email Settings</a>
                     </div>
-
                 </div>
             </div>
-
         </header>
 
         <hr id="menu-spacer"  />
+        <div id="vueBody">
 
-        <!-- Sidebar -->
         <!-- Sidebar -->
         <div id="sidebar">
             <h1 id="adminDashboard"> Admin Dashboard </h1>
             <hr />
             <div id="dashboardCatagories">
-                <button><i class="fa-solid fa-user"></i>Users</button>
-                <button><i class="fa-solid fa-flag"></i>Events</button>
-
+                <button v-on:click="toggleUsers()"><i class="fa-solid fa-user"></i>Users</button>
+                <button v-on:click="toggleEvents()"><i class="fa-solid fa-flag"></i>Events</button>
             </div>
         </div>
 
         <!-- Section Information -->
         <div id="adminSection">
-            <h1> Users </h1>
-            <!-- <button id="BlueButton"><i class="fa-solid fa-plus"></i> Add User </button> -->
+            <h1 v-if="showUsers"> Users </h1>
+            <h1 v-if="showEvents"> Events </h1>
 
             <div id="searchField">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -66,71 +63,70 @@
             </div>
 
         </div>
-        <!-- <div id="FilterOptions">
-            <button> All Users </button>
-            <button> System Administrators </button>
-        </div> -->
+
+        <!-- Insert Into Section -->
+        <template>
+            <div class="insertSection" v-if="showUsers">
+                <button class="blue-btn"><i class="fa-solid fa-plus"></i> Add User</button>
+                <input type="text" name="first_name" placeholder="First Name"></input>
+                <input type="text" name="last_name" placeholder="Last Name"></input>
+                <input type="text" name="email" placeholder="Last Name"></input>
+                <input type="text" name="password" placeholder="Password"></input>
+            </div>
+        </template>
 
         <hr />
 
         <!-- Table containing Data  -->
-        <table>
-            <tr>
-                <th> ID </th>
-                <th> Name </th>
+        <table :class="{ eventsTable : showEvents }">
+            <template> <!-- Users/Events Top Row -->
+            <tr v-if="showUsers">
+                <th> userID </th>
+                <th> First Name </th>
+                <th> Last Name </th>
                 <th> Email </th>
-                <th> User Type </th>
+                <th> Password </th>
             </tr>
-            <tr>
-                <td>234234</td>
-                <td>Bob Dylan</td>
-                <td>email@email.com</td>
-                <td>User</td>
+            <tr v-if="showEvents">
+                <th> eventID </th>
+                <th> eventName </th>
+                <th> Date </th>
+                <th> Street # </th>
+                <th> Street </th>
+                <th> Suburb </th>
+                <th> State </th>
+                <th> Post Code </th>
+                <th> Country </th>
+                <th> Creator </th>
             </tr>
-            <tr>
-                <td>234234</td>
-                <td>Bob Dylan</td>
-                <td>email@email.com</td>
-                <td>User</td>
-            </tr>
-            <tr>
-                <td>234234</td>
-                <td>Bob Dylan</td>
-                <td>email@email.com</td>
-                <td>User</td>
-            </tr>
-            <tr>
-                <td>234234</td>
-                <td>Bob Dylan</td>
-                <td>email@email.com</td>
-                <td>User</td>
-            </tr>
-            <tr>
-                <td>234234</td>
-                <td>Bob Dylan</td>
-                <td>email@email.com</td>
-                <td>User</td>
-            </tr>
-            <tr>
-                <td>234234</td>
-                <td>Bob Dylan</td>
-                <td>email@email.com</td>
-                <td>User</td>
-            </tr>
-            <tr>
-                <td>234234</td>
-                <td>Bob Dylan</td>
-                <td>email@email.com</td>
-                <td>User</td>
-            </tr>
-            <tr>
-                <td>234234</td>
-                <td>Bob Dylan</td>
-                <td>email@email.com</td>
-                <td>User</td>
-            </tr>
+            </template>
+            <template> <!-- Filling out table depending on whether users, events -->
+                    <!-- Users Table Data -->
+                    <tr v-for="user in users" v-if="showUsers">
+                        <td>  {{ user.USERID }} </td>
+                        <td>  {{ user.FIRST_NAME }} </td>
+                        <td>  {{ user.LAST_NAME }} </td>
+                        <td>  {{ user.EMAIL }} </td>
+                        <td>  {{ user.PASSWORD }} </td>
+                    </tr>
+                    <!-- Events Table Data -->
+                    <tr v-for="event in events" v-if="showEvents">
+                        <td> {{ event.EVENTID }} </td>
+                        <td> {{ event.EVENTNAME }} </td>
+                        <td> {{ event.DATE }} </td>
+                        <td> {{ event.STREET_NO }} </td>
+                        <td> {{ event.STREET }} </td>
+                        <td> {{ event.SUBURB }} </td>
+                        <td> {{ event.STATE }} </td>
+                        <td> {{ event.POST_CODE }} </td>
+                        <td> {{ event.COUNTRY }} </td>
+                        <td> {{ event.USERID }} </td>
+                    </tr>
+            </template>
 
         </table>
+
+    </div> <!-- VUE BODY DIV -->
 
 </body>
 </html>
