--- a/public/show_event.html
+++ b/public/show_event.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book your event</title>
+    <title>Event Details</title>
 
     <link rel="stylesheet" href="stylesheets/book_event.css">
+    <link rel="stylesheet" href="stylesheets/add_event.css">
     <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
     <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
     <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
 
     <script src="https://kit.fontawesome.com/2385786b33.js" crossorigin="anonymous"></script>
     <script src="javascripts/book_event.js"></script>
+    <script src="javascripts/add_event.js"></script>
 
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
@@ -50,7 +52,7 @@
         <hr />
 
 <div id="content">
-    <h1>Book your event</h1>
+    <h1>Event Details</h1>
 
     <!-- Event name -->
     <p id="event-name"></p>
@@ -61,36 +63,35 @@
     <!-- Date -->
     <i class="fa fa-calendar" aria-hidden="true"></i><p class="p" id="date"></p><br/>
 
-    <!-- Event Host -->
-    <h3>Event Host</h3>
-    <p class="p" id="event-host"></p><br/>
-
     <!-- Event Times -->
     <h3>Proposed Times</h3>
     <p class="p" id="event-times"></p><br/>
 
-    <!-- Select availability -->
-    <h3> Specify your availability for the event: </h3>
-    <button id="authorize_button" onclick="checkAvailability()">Fetch Availability from GCal</button>
-    <div id="free-busy"></div><br/>
+    <!-- Event Host -->
+    <h3>Event Host</h3>
+    <p class="p" id="event-host"></p><br/>
 
-    <h4> Select a suitable time: </h4>
+    <!-- Invitees Information -->
+    <h3>Invitees' Times</h3>
+    <p class="p" id="event-invitees"></p><br/>
+
+    <!-- Finalise event time -->
+    <h3>Confirm/Finalise Event Time</h3>
     <div class="time-div">
         <div>
             <label for="from-time"> From: </label>
-            <input type="time" id="from-time" name="appt" value="09:00">
+            <input type="time" id="from-time" value="09:00" class="start-time">
         </div>
         <div id="to-time-div">
             <label for="to-time"> To: </label>
-            <input type="time" id="to-time" name="appt" value="17:00">
+            <input type="time" id="to-time" value="17:00" class="end-time">
         </div>
     </div>
-    <input type="checkbox" id="not-available"><label>I am not available that day.</label><br/><br/>
+    <button id="submit-button">Finalise Time</button>
 
-    <!-- Submit availability -->
-    <button type="button" id="submit-button" onclick="submitAvailability()"> Submit availability</button>
     <!-- Cancel button -->
-    <button type="button" id="cancel-button" onclick="window.location.href='/Dashboard.html'"> Cancel </button>
+    <button id="cancel-button" onclick="window.location.href='/Dashboard.html'">Back to Dashboard</button>
+
 </div>
 
 </body>
