Get Started links to signup

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             <p class="tagline">Click the button below to get started.</p>
 
             <div id="get-started">
-                <button type="button" class="big-white-btn">Get Started</button>
+                <button type="button" class="big-white-btn" onclick="window.location.href='signUpPage.html'">Get Started</button>
             </div>
         </section>
 
