--- a/public/show_event.html
+++ b/public/show_event.html
@@ -33,7 +33,7 @@
             <!--container for links to Home and Profile settings-->
             <div class="top-right-menu">
                 <div class="menu-div">
-                    <a href="#user-dashboard" class="link-black menu-btn">Home</a>
+                    <a href="/Dashboard.html" class="link-black menu-btn">Home</a>
                 </div>
                 <div class="settings-dropdown">
                     <button type="button" class="blue-btn">Profile
