--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -5,6 +5,7 @@
 
         <meta charset="UTF-8">
         <title>Guest Details</title>
+        <script src="javascripts/user_no_acc.js"></script>
 
     </head>
 
@@ -17,7 +18,7 @@
             <form>
                 <input id="fn" name=firstName type="text" placeholder="First Name"<br>
                 <input id="ln" name=lastName type="text" placeholder="Last Name"><br><br>
-                <button type="submit" onclick="guest()">Submit</button>
+                <button type="button" onclick="guest()">Submit</button>
             </form>
         </div>
 
